<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>SelectTelescopeForm</class>
 <widget class="QDialog" name="SelectTelescopeForm">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>376</width>
    <height>314</height>
   </rect>
  </property>
  <property name="windowTitle">
   <string>Dialog</string>
  </property>
  <layout class="QGridLayout" name="gridLayout">
   <item row="0" column="0">
    <layout class="QVBoxLayout" name="verticalLayout">
     <item>
      <layout class="QHBoxLayout" name="horizontalLayout">
       <item>
        <widget class="QLabel" name="label">
         <property name="text">
          <string>dE telescope element number:</string>
         </property>
        </widget>
       </item>
       <item>
        <widget class="QSpinBox" name="dEelement">
         <property name="minimum">
          <number>1</number>
         </property>
         <property name="maximum">
          <number>208</number>
         </property>
        </widget>
       </item>
      </layout>
     </item>
     <item>
      <layout class="QHBoxLayout" name="horizontalLayout_2">
       <item>
        <widget class="QLabel" name="label_2">
         <property name="text">
          <string>dE telescope width:</string>
         </property>
        </widget>
       </item>
       <item>
        <widget class="QDoubleSpinBox" name="dEwidth">
         <property name="maximum">
          <double>5000.000000000000000</double>
         </property>
        </widget>
       </item>
       <item>
        <widget class="QComboBox" name="dEUnit">
         <item>
          <property name="text">
           <string>um</string>
          </property>
         </item>
         <item>
          <property name="text">
           <string>g/cm^2</string>
          </property>
         </item>
         <item>
          <property name="text">
           <string>mg/cm^2</string>
          </property>
         </item>
        </widget>
       </item>
      </layout>
     </item>
     <item>
      <layout class="QHBoxLayout" name="horizontalLayout_3">
       <item>
        <widget class="QLabel" name="label_4">
         <property name="text">
          <string>E telescope element number:</string>
         </property>
        </widget>
       </item>
       <item>
        <widget class="QSpinBox" name="Eelement">
         <property name="minimum">
          <number>1</number>
         </property>
         <property name="maximum">
          <number>208</number>
         </property>
        </widget>
       </item>
      </layout>
     </item>
     <item>
      <layout class="QHBoxLayout" name="horizontalLayout_4">
       <item>
        <widget class="QLabel" name="label_3">
         <property name="text">
          <string>E telescope width:</string>
         </property>
        </widget>
       </item>
       <item>
        <widget class="QDoubleSpinBox" name="Ewidth">
         <property name="maximum">
          <double>5000.000000000000000</double>
         </property>
        </widget>
       </item>
       <item>
        <widget class="QComboBox" name="EUnit">
         <item>
          <property name="text">
           <string>um</string>
          </property>
         </item>
         <item>
          <property name="text">
           <string>g/cm^2</string>
          </property>
         </item>
         <item>
          <property name="text">
           <string>mg/cm^2</string>
          </property>
         </item>
        </widget>
       </item>
      </layout>
     </item>
     <item>
      <widget class="QCheckBox" name="absPres">
       <property name="text">
        <string>Absorber present</string>
       </property>
       <property name="checked">
        <bool>true</bool>
       </property>
      </widget>
     </item>
     <item>
      <layout class="QHBoxLayout" name="horizontalLayout_5">
       <item>
        <widget class="QLabel" name="label_5">
         <property name="text">
          <string>Absorber element number:</string>
         </property>
        </widget>
       </item>
       <item>
        <widget class="QSpinBox" name="AbsElement">
         <property name="minimum">
          <number>1</number>
         </property>
         <property name="maximum">
          <number>208</number>
         </property>
        </widget>
       </item>
      </layout>
     </item>
     <item>
      <layout class="QHBoxLayout" name="horizontalLayout_6">
       <item>
        <widget class="QLabel" name="label_6">
         <property name="text">
          <string>Absorber width (um):</string>
         </property>
        </widget>
       </item>
       <item>
        <widget class="QDoubleSpinBox" name="AbsWidth">
         <property name="maximum">
          <double>5000.000000000000000</double>
         </property>
        </widget>
       </item>
       <item>
        <widget class="QComboBox" name="AbsUnit">
         <item>
          <property name="text">
           <string>um</string>
          </property>
         </item>
         <item>
          <property name="text">
           <string>g/cm^2</string>
          </property>
         </item>
         <item>
          <property name="text">
           <string>mg/cm^2</string>
          </property>
         </item>
        </widget>
       </item>
      </layout>
     </item>
     <item>
      <widget class="QDialogButtonBox" name="buttonBox">
       <property name="orientation">
        <enum>Qt::Horizontal</enum>
       </property>
       <property name="standardButtons">
        <set>QDialogButtonBox::Cancel|QDialogButtonBox::Ok</set>
       </property>
      </widget>
     </item>
    </layout>
   </item>
  </layout>
 </widget>
 <resources/>
 <connections>
  <connection>
   <sender>buttonBox</sender>
   <signal>accepted()</signal>
   <receiver>SelectTelescopeForm</receiver>
   <slot>accept()</slot>
   <hints>
    <hint type="sourcelabel">
     <x>248</x>
     <y>254</y>
    </hint>
    <hint type="destinationlabel">
     <x>157</x>
     <y>274</y>
    </hint>
   </hints>
  </connection>
  <connection>
   <sender>buttonBox</sender>
   <signal>rejected()</signal>
   <receiver>SelectTelescopeForm</receiver>
   <slot>reject()</slot>
   <hints>
    <hint type="sourcelabel">
     <x>316</x>
     <y>260</y>
    </hint>
    <hint type="destinationlabel">
     <x>286</x>
     <y>274</y>
    </hint>
   </hints>
  </connection>
 </connections>
</ui>
